// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`instructor view render 1`] = `
<div
  className="slot-container"
>
  <div
    className="slot"
    id="slot0"
    onClick={[Function]}
  >
    <button
      id="confirm0"
      onClick={[Function]}
    >
      ✎
    </button>
    <button
      id="cancel0"
      onClick={[Function]}
    >
      ❌
    </button>
    12:00AM - 
    12:10AM
    <input
      className="text-input"
      id="identity0"
      maxLength={50}
      name="identity0"
      onChange={[Function]}
      placeholder="Unassigned UtorID..."
      type="text"
      value="parkerpeter15"
    />
    <input
      className="text-input"
      id="note0"
      maxLength={280}
      name="note0"
      onChange={[Function]}
      placeholder="Empty Note..."
      type="text"
      value="Everyone gets one."
    />
  </div>
  <div
    className="slot"
    id="slot1"
    onClick={[Function]}
  >
    <button
      id="confirm1"
      onClick={[Function]}
    >
      ✎
    </button>
    <button
      id="cancel1"
      onClick={[Function]}
    >
      ❌
    </button>
    12:10AM - 
    12:20AM
    <input
      className="text-input"
      id="identity1"
      maxLength={50}
      name="identity1"
      onChange={[Function]}
      placeholder="Unassigned UtorID..."
      type="text"
      value="watsonmj25"
    />
    <input
      className="text-input"
      id="note1"
      maxLength={280}
      name="note1"
      onChange={[Function]}
      placeholder="Empty Note..."
      type="text"
      value="Face it Tiger... you just hit the jackpot!"
    />
  </div>
  <div
    className="slot"
    id="slot2"
    onClick={[Function]}
  >
    <button
      id="confirm2"
      onClick={[Function]}
    >
      ✎
    </button>
    <button
      id="cancel2"
      onClick={[Function]}
    >
      ❌
    </button>
    12:20AM - 
    12:30AM
    <input
      className="text-input"
      id="identity2"
      maxLength={50}
      name="identity2"
      onChange={[Function]}
      placeholder="Unassigned UtorID..."
      type="text"
      value=""
    />
    <input
      className="text-input"
      id="note2"
      maxLength={280}
      name="note2"
      onChange={[Function]}
      placeholder="Empty Note..."
      type="text"
      value=""
    />
  </div>
  <button
    id="empty-button"
    onClick={[Function]}
  >
    Empty All Slots
  </button>
  <button
    id="update-button"
    onClick={[Function]}
  >
    Refresh
  </button>
  <button
    id="undo-button"
    onClick={[Function]}
  >
    Undo Changes
  </button>
</div>
`;

exports[`student view render 1`] = `
<div
  className="slot-container"
>
  <div
    className="slot"
    id="slot0"
    onClick={[Function]}
  >
    <button
      id="confirm0"
      onClick={[Function]}
    >
      ✎
    </button>
    <button
      id="cancel0"
      onClick={[Function]}
    >
      ❌
    </button>
    12:00AM - 
    12:10AM
    <div
      id="identity0"
    >
      parkerpeter15
    </div>
    <input
      className="text-input"
      id="note0"
      maxLength={280}
      name="note0"
      onChange={[Function]}
      placeholder="Empty Note..."
      type="text"
      value="Everyone gets one."
    />
  </div>
  <div
    className="slot"
    id="slot1"
    onClick={[Function]}
  >
    <button
      id="confirm1"
      onClick={[Function]}
    >
      ✎
    </button>
    <button
      id="cancel1"
      onClick={[Function]}
    >
      ❌
    </button>
    12:10AM - 
    12:20AM
    <div
      id="identity1"
    >
      Not Available
    </div>
    <div
      id="note1"
    />
  </div>
  <div
    className="slot"
    id="slot2"
    onClick={[Function]}
  >
    <button
      id="confirm2"
      onClick={[Function]}
    >
      ✎
    </button>
    <button
      id="cancel2"
      onClick={[Function]}
    >
      ❌
    </button>
    12:20AM - 
    12:30AM
    <div
      id="identity2"
    >
      Available
    </div>
    <div
      id="note2"
    />
  </div>
  <button
    id="empty-button"
    onClick={[Function]}
  >
    Empty My Slots
  </button>
  <button
    id="update-button"
    onClick={[Function]}
  >
    Refresh
  </button>
  <button
    id="undo-button"
    onClick={[Function]}
  >
    Undo Changes
  </button>
</div>
`;
